@@ -12,6 +12,7 @@ Version 3.1.3 (v3.1.3 RTM)
 	Bug fixes:
 		-[Core] Registration of conditional closed-generic types prevented when container allows
 		 overriding registrations. (fixes #216)
+		-[WCF] WCF integration failed to create WCF services marked with InstanceContextMode.Single. (fixes #197)
 
 
 Version 3.1.2 (v3.1.2 RTM) 2015-12-13
